avro_derive/tests/ui/avro_3687_basic_enum_with_default_twice.stderr
error: Multiple defaults defined: ["A", "C"]
  --> tests/ui/avro_3687_basic_enum_with_default_twice.rs:21:6
   |
21 | enum Basic {
   |      ^^^^^

error: multiple declared defaults
  --> tests/ui/avro_3687_basic_enum_with_default_twice.rs:20:22
   |
20 | #[derive(AvroSchema, Default)]
   |                      ^^^^^^^
...
23 |     A,
   |     - first default
...
26 |     C,
   |     - additional default
   |
   = note: only one variant can be default
